# uav-rc-xapp-with-algorithms

./: .gitignore  CLAUDE.md  FULL_AUTOMATION_REPORT.md  README.md
commands/: design-sim-scenario-step.command.md  design-uav-policy-step.command.md  design-uav-policy-step.command_1.md  init-uav-rc-project.command.md  init-uav-rc-project.command_1.md
docs/: algorithms.md  architecture.md  architecture_1.md  sim-pipeline.md
nonrt/uav-path-planner/: README.md
sim/: README.md
sim/nsoran/: kpm_subscriptions.yaml  rc_pipeline.yaml  scenario.yaml  uav_paths.yaml
sim/scripts/: glue_policy_to_nsoran.py  run_near_rt_mock.py  run_nonrt_planner.py
skills/sim-scenario-designer/: Skill.md
skills/uav-oran-usecase-digest/: Skill.md  Skill_1.md
skills/uav-path-planner/: Skill.md
skills/uav-policy-xapp-scaffolder/: Skill.md  Skill_1.md
skills/uav-sim-operator/: Skill.md  (+1 more)
spec/: uav_oran_usecase.md
subagents/: qa-engineer.md  qa-engineer_1.md  ric-architect.md  ric-architect_1.md  sim-integration.md  sim-integration_1.md  xapp-developer.md  xapp-developer_1.md
xapps/uav-policy/: .coverage  API.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_1.md  README_HTTP_API.md  automated_pipeline.sh  benchmark_results.json  convert_oran_traffic.py  generate_synthetic_tractor.py  ml_optimization.py  pyproject.toml  setup.py  test_e2e_integration.py  test_e2sim_integration.py  test_performance_benchmark.py
xapps/uav-policy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
xapps/uav-policy/src/uav_policy/: __init__.py  __init___1.py  main.py  main_1.py  policy_engine.py  policy_engine_1.py  server.py
xapps/uav-policy/tests/: test_http_server.py  test_policy_engine.py  test_policy_engine_1.py
(+10 files in other folders)
